--- a/Step3/TableViewPractice/NaverImageTableViewCell.xib
+++ b/Step3/TableViewPractice/NaverImageTableViewCell.xib
@@ -2,7 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>c
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,31 +16,32 @@
                 <rect key="frame" x="0.0" y="0.0" width="579" height="171"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DkB-HU-6fO">
-                        <rect key="frame" x="20" y="8" width="120" height="155"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DkB-HU-6fO">
+                        <rect key="frame" x="4" y="4" width="150" height="163"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="120" id="IYp-5e-VOb"/>
-                            <constraint firstAttribute="height" priority="999" constant="120" id="zPG-a1-Oyc"/>
+                            <constraint firstAttribute="width" constant="150" id="IYp-5e-VOb"/>
+                            <constraint firstAttribute="height" priority="750" constant="120" id="zPG-a1-Oyc"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0e-oS-03W">
-                        <rect key="frame" x="160" y="8" width="399" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0e-oS-03W">
+                        <rect key="frame" x="174" y="4" width="385" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DkB-HU-6fO" firstAttribute="leading" secondItem="70u-wc-7A4" secondAttribute="leading" constant="20" id="2VT-Rd-ae0"/>
+                    <constraint firstItem="DkB-HU-6fO" firstAttribute="leading" secondItem="70u-wc-7A4" secondAttribute="leading" constant="4" id="2VT-Rd-ae0"/>
                     <constraint firstItem="g0e-oS-03W" firstAttribute="leading" secondItem="DkB-HU-6fO" secondAttribute="trailing" constant="20" id="ChS-Oa-ur5"/>
                     <constraint firstAttribute="trailing" secondItem="g0e-oS-03W" secondAttribute="trailing" constant="20" id="HXd-3K-CgQ"/>
-                    <constraint firstItem="DkB-HU-6fO" firstAttribute="top" secondItem="70u-wc-7A4" secondAttribute="top" constant="8" id="LnY-di-wTF"/>
+                    <constraint firstItem="DkB-HU-6fO" firstAttribute="top" secondItem="70u-wc-7A4" secondAttribute="top" constant="4" id="LnY-di-wTF"/>
                     <constraint firstItem="g0e-oS-03W" firstAttribute="top" secondItem="DkB-HU-6fO" secondAttribute="top" id="RHb-OQ-htp"/>
-                    <constraint firstAttribute="bottom" secondItem="DkB-HU-6fO" secondAttribute="bottom" constant="8" id="djs-rF-bzi"/>
+                    <constraint firstAttribute="bottom" secondItem="DkB-HU-6fO" secondAttribute="bottom" constant="4" id="djs-rF-bzi"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="naverImage" destination="DkB-HU-6fO" id="EN8-S5-4f8"/>
+                <outlet property="naverImageHeightConstraint" destination="zPG-a1-Oyc" id="4fG-dl-tHS"/>
                 <outlet property="titleLabel" destination="g0e-oS-03W" id="TiP-0t-Y2a"/>
             </connections>
             <point key="canvasLocation" x="254.34782608695653" y="778.45982142857144"/>
