--- a/Step3/TableViewPractice/NaverImageTableViewCell.xib
+++ b/Step3/TableViewPractice/NaverImageTableViewCell.xib
@@ -8,40 +8,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="NaverImageTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellId" rowHeight="259" id="cx7-WA-Rz3" customClass="NaverImageTableViewCell" customModule="TableViewPractice" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="579" height="259"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="NaverImageTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellId" rowHeight="284" id="cx7-WA-Rz3" customClass="NaverImageTableViewCell" customModule="TableViewPractice" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="579" height="284"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cx7-WA-Rz3" id="70u-wc-7A4">
-                <rect key="frame" x="0.0" y="0.0" width="579" height="259"/>
+                <rect key="frame" x="0.0" y="0.0" width="579" height="284"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DkB-HU-6fO">
-                        <rect key="frame" x="4" y="30" width="571" height="225"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0e-oS-03W">
-                        <rect key="frame" x="4" y="8" width="571" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fPe-nE-n8u">
+                        <rect key="frame" x="0.0" y="10" width="579" height="274"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="asdgasdg" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0e-oS-03W">
+                                <rect key="frame" x="0.0" y="0.0" width="579" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DkB-HU-6fO">
+                                <rect key="frame" x="0.0" y="27" width="579" height="212.5"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DRK-iT-fhq">
+                                <rect key="frame" x="0.0" y="249.5" width="579" height="24.5"/>
+                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="5"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="DRK-iT-fhq" secondAttribute="bottom" id="Ggd-rv-uaD"/>
+                            <constraint firstItem="DRK-iT-fhq" firstAttribute="leading" secondItem="fPe-nE-n8u" secondAttribute="leading" id="HWn-py-cSu"/>
+                            <constraint firstItem="g0e-oS-03W" firstAttribute="top" secondItem="fPe-nE-n8u" secondAttribute="top" id="NwP-2q-dId"/>
+                            <constraint firstAttribute="trailing" secondItem="DRK-iT-fhq" secondAttribute="trailing" id="bg2-Tv-VQG"/>
+                            <constraint firstItem="g0e-oS-03W" firstAttribute="leading" secondItem="fPe-nE-n8u" secondAttribute="leading" id="d1k-JR-gaS"/>
+                            <constraint firstAttribute="trailing" secondItem="g0e-oS-03W" secondAttribute="trailing" id="lyX-SU-8Sw"/>
+                        </constraints>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DkB-HU-6fO" firstAttribute="leading" secondItem="70u-wc-7A4" secondAttribute="leading" constant="4" id="2VT-Rd-ae0"/>
-                    <constraint firstItem="g0e-oS-03W" firstAttribute="leading" secondItem="70u-wc-7A4" secondAttribute="leading" constant="4" id="4Wc-4M-Sog"/>
-                    <constraint firstItem="g0e-oS-03W" firstAttribute="centerX" secondItem="70u-wc-7A4" secondAttribute="centerX" id="5mP-YH-VcF"/>
-                    <constraint firstItem="DkB-HU-6fO" firstAttribute="top" secondItem="70u-wc-7A4" secondAttribute="top" constant="30" id="LnY-di-wTF"/>
-                    <constraint firstAttribute="trailing" secondItem="DkB-HU-6fO" secondAttribute="trailing" constant="4" id="O1t-go-EAv"/>
-                    <constraint firstAttribute="trailing" secondItem="g0e-oS-03W" secondAttribute="trailing" constant="4" id="RG8-GL-xlk"/>
-                    <constraint firstItem="g0e-oS-03W" firstAttribute="top" secondItem="70u-wc-7A4" secondAttribute="top" constant="8" id="ZDj-CG-My9"/>
-                    <constraint firstAttribute="bottom" secondItem="DkB-HU-6fO" secondAttribute="bottom" constant="4" id="djs-rF-bzi"/>
-                    <constraint firstItem="DkB-HU-6fO" firstAttribute="top" secondItem="g0e-oS-03W" secondAttribute="bottom" constant="4" id="mMX-GV-Egr"/>
+                    <constraint firstItem="fPe-nE-n8u" firstAttribute="leading" secondItem="70u-wc-7A4" secondAttribute="leading" id="S1s-Ho-LCX"/>
+                    <constraint firstAttribute="trailing" secondItem="fPe-nE-n8u" secondAttribute="trailing" id="TDW-QS-uDt"/>
+                    <constraint firstItem="fPe-nE-n8u" firstAttribute="top" secondItem="70u-wc-7A4" secondAttribute="top" constant="10" id="Tq3-wu-kx9"/>
+                    <constraint firstAttribute="bottom" secondItem="fPe-nE-n8u" secondAttribute="bottom" id="fUU-zX-AF3"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="linkButton" destination="DRK-iT-fhq" id="OkM-zZ-JLf"/>
                 <outlet property="naverImage" destination="DkB-HU-6fO" id="EN8-S5-4f8"/>
                 <outlet property="titleLabel" destination="g0e-oS-03W" id="TiP-0t-Y2a"/>
             </connections>
-            <point key="canvasLocation" x="254.34782608695653" y="807.92410714285711"/>
+            <point key="canvasLocation" x="254.34782608695653" y="816.29464285714278"/>
         </tableViewCell>
     </objects>
 </document>
